[package]
name = "rsimple_http"
version = "0.1.0"
edition = "2021"
description = "Simple HTTP server library"
readme = "README.md"
license = "MIT"
keywords = ["http", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
