[package]
name = "rsimple_http"
version = "0.2.1"
edition = "2021"
description = "Simple HTTP server library"
readme = "README.md"
license = "MIT"
keywords = ["http", "server"]
repository = "https://github.com/Tebro/rsimple_http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
regex = "1.10.2"
